@startuml E-commerce ERD

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>

title E-commerce Entity Relationship Diagram

table(Category) {
    primary_key(id) : Integer (PK)
    foreign_key(parent_id) : Integer (FK)
    name : CharField(50)
    slug : SlugField(55)
    is_active : Boolean
    level : SmallInteger
}

table(Product) {
    primary_key(id) : Integer (PK)
    foreign_key(category_id) : Integer (FK)
    name : CharField(50)
    slug : SlugField(55)
    description : TextField
    is_digital : Boolean
    is_active : Boolean
    created_at : DateTimeField
    updated_at : DateTimeField
    price : DecimalField(10,2)
}

table(StockManagement) {
    primary_key(id) : Integer (PK)
    foreign_key(product_id) : Integer (FK)
    quantity : Integer
    last_checked_at : DateTimeField
}

table(PromotionEvent) {
    primary_key(id) : Integer (PK)
    name : CharField(50)
    start_date : DateTimeField
    end_date : DateTimeField
    price_reduction : IntegerField
}

table(ProductPromotionEvent) {
    primary_key(id) : Integer (PK)
    foreign_key(product_id) : Integer (FK)
    foreign_key(promotion_event_id) : Integer (FK)
}

' Relationships
Category ||--o{ Product : "has many"
Category ||--o{ Category : "self-referencing"
Product ||--|| StockManagement : "has one"
Product ||--o{ ProductPromotionEvent : "has many"
PromotionEvent ||--o{ ProductPromotionEvent : "has many"

note right of Category
  Self-referencing relationship
  for hierarchical categories
end note

note right of Product
  Each product belongs to
  exactly one category
end note

note right of StockManagement
  One-to-one relationship
  with Product for inventory
  tracking
end note

note right of PromotionEvent
  Defines promotional events
  with discount percentages
  (10%, 20%, 50%)
end note

note right of ProductPromotionEvent
  Many-to-many relationship
  between Product and PromotionEvent
  with unique constraint
end note

@enduml 